# limb-repo

./: .gitignore  .pylintrc  0.hdf5  README.md  pyproject.toml
assets/configs/: test_env_config.yaml
assets/configs/nn_configs/: 30-1024-2048-2048-1024-12.yaml  30-512-512-512-12.yaml  30-512-512-512-512-12.yaml  30-64-128-64-12.yaml
playground/: combine_hdf5.py  config_parsing.py  dynamics_comparison.py  dynamics_rollout.py  hdf5_file_testing.py  limb_repo_pybullet_testing.py  lr_pybullet_testing.py  math_dynamics.py  math_dynamics_testing.py  np_subclassing.py  pybullet_dynamics_script.py  pybullet_dynamics_testing.py
scripts/: combine_big_hdf5s.py  combine_hdf5s.py  find_valid_configs.py  generate_dynamics_data.py  train_dynamics_model.py
src/limb_repo/: structs.py
src/limb_repo/dynamics/: base_dynamics.py  math_dynamics_with_n_vector.py
src/limb_repo/dynamics/checks/: check_ee_kinematics.py
src/limb_repo/dynamics/models/: base_dynamics.py  base_dynamics_with_sim.py  base_math_dynamics.py  math_dynamics.py  (+6 more)
src/limb_repo/environments/: base_env.py  limb_repo_pybullet_env.py  lr_pybullet_env.py  pybullet_env.py
src/limb_repo/planners/: base_controller.py
src/limb_repo/utils/: file_utils.py  pinocchio_utils.py  pybullet_utils.py  utils.py
src/model_training/data_collection/: data_generator.py
tests/dynamics/: test_batched_dynamics.py  test_dynamics.py
tests/dynamics/assets/: test-30-30-12.yaml  test-data.hdf5  test-weights.weights
tests/environment/: test_limb_repo_pybullet_env.py  test_lr_pybullet_env.py
tests/structs/: test_limb_repo_state.py
(+5 files in other folders)
